# firemusic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.pt-br.md  ROADMAP.md  package.json
gui/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
gui/src/: App.svelte  main.ts
gui/src/components/: PlayerBar.svelte  Sidebar.svelte  TrackTable.svelte
gui/src/lib/: api.ts  format.ts
gui/src/styles/: app.css
scripts/: install_linux.sh  install_macos.sh  install_unix.sh  install_windows.ps1
src/: discovery.rs  download.rs  lib.rs  main.rs  player.rs  tactical_select.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/audio/: crossfade.rs  eq.rs  mod.rs
src/cli/: args.rs  help_topics.rs  mod.rs  play.rs
src/core/: config.rs  discovery.rs  download.rs  error.rs  mod.rs  mpv.rs  paths.rs  player.rs  store.rs
src/core/audio/: crossfade.rs  eq.rs  mod.rs
src/core/discovery/: mod.rs  session.rs  tiktok.rs  types.rs  ytdl.rs
src/core/download/: mod.rs  session.rs  ytdl.rs
src/gui/: cover.rs  mod.rs  runtime.rs  snapshot.rs
src/tui/: app.rs  event_loop.rs  mod.rs  state.rs  ui.rs
src/tui/ui/: library.rs  mod.rs  now_playing.rs  playlists.rs  popups.rs  queue.rs  sidebar.rs  stats.rs  statusbar.rs  theme.rs  titlebar.rs
