[package]
name = "firemusic"
version = "0.2.2"
edition = "2021"

[dependencies]
libmpv2 = "5.0.3"
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
crossterm = "0.27.0"
dialoguer = "0.11.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[[bin]]
name = "firemusic"
path = "src/main.rs"
