[package]
name = "firemusic"
version = "0.2.5"
edition = "2021"

[dependencies]
libmpv2 = "5.0.3"
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
crossterm = "0.28.1"
dialoguer = "0.11.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
dirs = "5.0"
ratatui = "0.28.1"

[[bin]]
name = "msc"
path = "src/main.rs"

[[bin]]
name = "firemusic"
path = "src/main.rs"
